# algorithm-exercises

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/data_structures/priority_queue/: input2.txt  input3.txt  input4.txt
data/divide_conquer/points_and_segments/: input2.txt  input3.txt  output3.txt
data/misc/count_sort/: output1.txt
src/: utils.py
src/data_structures/: priority_queue.py
src/divide_conquer/: array_inversions.py  binary_search.py  points_and_segments.py
src/dynamic_programming/: edit_distance.py  knapsack_without_values.py  longest_subseq.py  primitive_calc.py  stairs.py
src/greedy/: huffman_decoding.py  huffman_encoding.py
src/greedy_algorithms/: huffman_decoding.py  huffman_encoding.py
src/misc/: count_sort.py
tests/data_structures/: test_priority_queue.py
tests/greedy_algorithms/: test_huffman.py
