[project]
name = "algorithmic-problems"

[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.ruff]
lint.select = [
    "F", # Pyflakes
    "E", # Pycodestyle
    "W", # Pycodestyle
    "UP", # pyupgrade
    "I", # isort
    "PL" # Pylint
]
lint.ignore = ["E501"] # Black take care of line-too-long

[tool.pytest.ini_options]
pythonpath = ["src"]
